--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -10,6 +10,7 @@ page {
 }
 .cates .cates_container .left_menu {
   flex: 2;
+  border-right: #ccc solid 1px;
 }
 .cates .cates_container .left_menu .menu_item {
   height: 80rpx;
@@ -50,4 +51,38 @@ page {
 .cates .cates_container .right_content .goods_group .goods_list navigator .goods_name {
   text-align: center;
   font-size: 23rpx;
+}
+
+
+.goods_item {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1rpx solid #ccc;
+}
+.goods_item .goods_img_wrap {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.goods_item .goods_img_wrap image {
+  width: 70%;
+}
+.goods_item .goods_info_wrap {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  /* justify-content: space-around;环绕两侧 */
+}
+.goods_item .goods_info_wrap .goods_name {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+.goods_item .goods_info_wrap .goods_price {
+  color: var(--themeColor);
+  font-size: 32rpx;
+  padding-bottom: 0rpx;
 }
