--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -71,9 +71,43 @@ page {
 .goods_item .goods_info_wrap {
   flex: 3;
   display: flex;
+  flex-direction: row;
+  /* justify-content: space-around; */
+  /* justify-content: space-around;环绕两侧 */
+}
+.goods_item .goods_info_wrap .nameANDprice{
+  flex:3;
+  display: flex;
   flex-direction: column;
   justify-content: space-around;
-  /* justify-content: space-around;环绕两侧 */
+}
+
+.goods_item .goods_info_wrap .gouwuche{
+  flex: 1;
+  margin-top: 100rpx;
+ 
+}
+
+.goods_item .goods_info_wrap .nameANDprice .goods_name {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+.goods_item .goods_info_wrap .nameANDprice .goods_price {
+  color: var(--themeColor);
+  font-size: 32rpx;
+  padding-bottom: 0rpx;
+}
+
+
+/*
+
+.goods_item .goods_info_wrap {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 .goods_item .goods_info_wrap .goods_name {
   display: -webkit-box;
@@ -86,3 +120,6 @@ page {
   font-size: 32rpx;
   padding-bottom: 0rpx;
 }
+
+
+*/
