修复了在商品列表和商品详情加入购物车时，存在同一商品多个记录的问题

--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -26,7 +26,7 @@
                 <view class="goods_price">￥{{goods.price}}</view>
               </view>
               <view class="gouwuche">
-                <view class="iconfont icon-gouwuche" catchtap="addCart" data-goodsname="{{goods.name}}"></view>
+                <view class="iconfont icon-gouwuche" catchtap="handleCartAdd" data-goodsname="{{goods.name}}"></view>
               </view>
             </view>
           </view>
