--- a/pages/collect/index.wxml
+++ b/pages/collect/index.wxml
@@ -1,2 +1,14 @@
-<!--pages/collect/index.wxml-->
-<text>pages/collect/index.wxml</text>
+
+  <view class="collect_content">
+    <view class="collect_main">
+      <navigator wx:for="{{collect}}" wx:key="goods_id" url="/pages/goods_detail/goods_detail?goods_id={{item.goods_id}}">
+        <view class="goods_image">
+          <image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'https://ww1.sinaimg.cn/large/007rAy9hgy1g24by9t530j30i20i2glm.jpg'}}" />
+        </view>
+        <view class="goods_info">
+          <view class="info_name">{{item.goods_name}}</view>
+          <view class="info_price">¥{{item.goods_price}}</view>
+        </view>
+      </navigator>
+    </view>
+  </view>
