完成收藏页面的商品显示

--- a/pages/collect/index.wxml
+++ b/pages/collect/index.wxml
@@ -1,14 +1,16 @@
 
-  <view class="collect_content">
+  <view class="collect_content" wx:if="{{islogin}}">
     <view class="collect_main">
-      <navigator wx:for="{{collect}}" wx:key="goods_id" url="/pages/goods_detail/goods_detail?goods_id={{item.goods_id}}">
+      <navigator wx:for="{{collections}}" wx:key="goodsName" url="/pages/goods_detail/index?goods_name={{item.goodsName}}">
         <view class="goods_image">
-          <image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'https://ww1.sinaimg.cn/large/007rAy9hgy1g24by9t530j30i20i2glm.jpg'}}" />
+          <image mode="widthFix" src="{{item.image?item.image:'https://ww1.sinaimg.cn/large/007rAy9hgy1g24by9t530j30i20i2glm.jpg'}}" />
         </view>
         <view class="goods_info">
-          <view class="info_name">{{item.goods_name}}</view>
-          <view class="info_price">¥{{item.goods_price}}</view>
+          <view class="info_name">{{item.goodsName}}</view>
+          <view class="info_price">¥{{item.price*item.discount}}</view>
         </view>
       </navigator>
     </view>
   </view>
+
+<view wx:else>未登录</view>
