--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -15,19 +15,19 @@
         <!--我的收藏-->
         <view class="collection">
             <view class="item">
-                <text class="num">0</text>
+                <!-- <text class="num">0</text> -->
                 <text class="text" bindtap="commonToast">收藏的店铺</text>
             </view>
             <navigator url="/pages/collect/index" class="item">
-                <text class="num">{{collectNum}}</text>
+                <!-- <text class="num">{{collectNum}}</text> -->
                 <text class="text">收藏的商品</text>
             </navigator>
             <view class="item">
-                <text class="num">0</text>
+                <!-- <text class="num">0</text> -->
                 <text class="text" bindtap="commonToast">关注的商品</text>
             </view>
             <view class="item">
-                <text class="num">0</text>
+                <!-- <text class="num">0</text> -->
                 <text class="text" bindtap="commonToast">我的足迹</text>
             </view>
         </view>
