--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -18,10 +18,10 @@
                 <!-- <text class="num">0</text> -->
                 <text class="text" bindtap="commonToast">收藏的店铺</text>
             </view>
-            <navigator url="/pages/collect/index" class="item">
+            <view class="item">
                 <!-- <text class="num">{{collectNum}}</text> -->
-                <text class="text">收藏的商品</text>
-            </navigator>
+                <text class="text" catchtap="toCollection">收藏的商品</text>
+            </view>
             <view class="item">
                 <!-- <text class="num">0</text> -->
                 <text class="text" bindtap="commonToast">关注的商品</text>
