--- a/pages/orderdetail/index.wxss
+++ b/pages/orderdetail/index.wxss
@@ -115,3 +115,11 @@
 	width:350px;
 	border-radius:25px;
 }
+
+.CommentContainer{
+		background-color: rgb(236, 230, 230);
+		margin: 20rpx 10rpx;
+		border: solid 1px gray;
+		border-radius: 12rpx;
+		padding: 20rpx 10rpx;
+}
