商品图片全部替换为遇见图床中的图片（app.globalData.weserv变量添加在url前面），不再使用云存储

--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -27,7 +27,7 @@
         </view>
         <!-- 图片 -->
         <navigator class="cart_img_wrap" url="../goods_detail/index?goods_name={{item.goodsName}}">
-          <image src="{{item.image}}" mode="widthFix" />
+          <image src="{{weserv+item.image}}" mode="widthFix" />
         </navigator>
         <!-- 信息 -->
         <view class="cart_info_wrap">
