--- a/pages/goods_detail/index.wxml
+++ b/pages/goods_detail/index.wxml
@@ -2,7 +2,7 @@
 <view class="commodity_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></view>
 
 <view class="detail_swiper">
-  <image mode="widthFix" src="{{goodsDetail.image}}"></image>
+  <image mode="widthFix" src="{{weserv+goodsDetail.image}}"></image>
 </view>
 
 <view class="goods_price">￥{{goodsDetail.price}}</view>
@@ -54,7 +54,7 @@
 
  <!--弹出框  -->
 <view animation="{{animationData}}" class="commodity_attr_box" wx:if="{{showModalStatus}}">
-   <view class='commImg'><image src='{{goodsDetail.image}}' mode="aspectFit"></image></view>
+   <view class='commImg'><image src='{{weserv+goodsDetail.image}}' mode="aspectFit"></image></view>
    <view class='column'>
       <text class="sku-title">单价</text>
       <text class="sku-price">￥{{goodsDetail.price}}</text>
