--- a/pages/pay/index.wxml
+++ b/pages/pay/index.wxml
@@ -16,7 +16,7 @@
     <view class="cart_item" wx:for="{{cart}}" wx:key="goods_id">
       <!-- 图片 -->
       <navigator class="cart_img_wrap" url="../goods_detail/index?goods_name={{item.goodsName}}">
-        <image src="{{item.image}}" mode="widthFix" />
+        <image src="{{weserv+item.image}}" mode="widthFix" />
       </navigator>
       <!-- 信息 -->
       <view class="cart_info_wrap">
