--- a/pages/search/index.wxss
+++ b/pages/search/index.wxss
@@ -1,1 +1,125 @@
-/* pages/search/index.wxss */
+page {
+  height: 100%;
+}
+.cates {
+  height: 100%;
+}
+.cates .cates_container {
+  height: calc(100vh - 75rpx);
+  display: flex;
+}
+.cates .cates_container .left_menu {
+  flex: 2;
+  border-right: #ccc solid 1px;
+}
+.cates .cates_container .left_menu .menu_item {
+  height: 80rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25rpx;
+  color: gray;
+}
+.cates .cates_container .left_menu .action {
+  color: var(--themeColor);
+  border-left: 5rpx solid currentColor;
+}
+.cates .cates_container .right_content {
+  flex: 5;
+}
+.cates .cates_container .right_content .goods_group {
+  height: 100%;
+}
+.cates .cates_container .right_content .goods_group .goods_title {
+  height: 60rpx;
+  text-align: center;
+  font-size: 30rpx;
+  margin: 10rpx auto 10rpx auto;
+  color: #e6b57d;
+}
+.cates .cates_container .right_content .goods_group .goods_list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.cates .cates_container .right_content .goods_group .goods_list navigator {
+  width: 33.33%;
+  padding: 5rpx;
+}
+.cates .cates_container .right_content .goods_group .goods_list navigator image {
+  width: 100%;
+}
+.cates .cates_container .right_content .goods_group .goods_list navigator .goods_name {
+  text-align: center;
+  font-size: 23rpx;
+}
+
+
+.goods_item {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1rpx solid #ccc;
+}
+.goods_item .goods_img_wrap {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.goods_item .goods_img_wrap image {
+  width: 70%;
+}
+.goods_item .goods_info_wrap {
+  flex: 3;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-around; */
+  /* justify-content: space-around;环绕两侧 */
+}
+.goods_item .goods_info_wrap .nameANDprice{
+  flex:3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.goods_item .goods_info_wrap .gouwuche{
+  flex: 1;
+  margin-top: 100rpx;
+ 
+}
+
+.goods_item .goods_info_wrap .nameANDprice .goods_name {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+.goods_item .goods_info_wrap .nameANDprice .goods_price {
+  color: var(--themeColor);
+  font-size: 32rpx;
+  padding-bottom: 0rpx;
+}
+
+
+/*
+
+.goods_item .goods_info_wrap {
+  flex: 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.goods_item .goods_info_wrap .goods_name {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+.goods_item .goods_info_wrap .goods_price {
+  color: var(--themeColor);
+  font-size: 32rpx;
+  padding-bottom: 0rpx;
+}
+
+
+*/
