--- a/components/SearchInput/SearchInput.wxss
+++ b/components/SearchInput/SearchInput.wxss
@@ -7,6 +7,7 @@
 .search_input input {
   height: 100%;
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   background-color: #fff;
