只留下收藏的商品，删除其余的店铺、足迹等

--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -13,23 +13,15 @@
     <!--主要内容-->
     <view class="user_conente">
         <!--我的收藏-->
-        <view class="collection">
-            <view class="item">
-                <!-- <text class="num">0</text> -->
-                <text class="text" bindtap="commonToast">收藏的店铺</text>
+        <view class="collection" catchtap="toCollection">
+            
+            <view class="item"> 
+                <text class="text">收藏的商品</text>
             </view>
             <view class="item">
-                <!-- <text class="num">{{collectNum}}</text> -->
-                <text class="text" catchtap="toCollection">收藏的商品</text>
+                <view class="iconfont .icon-gengduo"></view>
             </view>
-            <view class="item">
-                <!-- <text class="num">0</text> -->
-                <text class="text" bindtap="commonToast">关注的商品</text>
-            </view>
-            <view class="item">
-                <!-- <text class="num">0</text> -->
-                <text class="text" bindtap="commonToast">我的足迹</text>
-            </view>
+            
         </view>
         <!--我的订单-->
         <view class="user_order">
