--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -39,8 +39,8 @@
 }
 .user_info_wrap .user_conente .collection {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: space-between;
+  /* align-items: center; */
   height: 90rpx;
   background-color: #ffffff;
   border-radius: 10rpx;
@@ -48,7 +48,9 @@
 .user_info_wrap .user_conente .collection .item {
   /* display: flex; */
   /* flex-direction: column; */
-  align-items: center;
+  /* position: relative;
+  right: 290rpx; */
+  /* align-content: space-around; */
 }
 .user_info_wrap .user_conente .collection .item .num {
   color: var(--themeColor);
