--- a/pages/search/index.wxss
+++ b/pages/search/index.wxss
@@ -1,6 +1,14 @@
 page {
   height: 100%;
 }
+.noresult{
+  background-color: rgb(236, 230, 230);
+  margin: 20rpx 10rpx;
+  padding: 20rpx 10rpx;
+  font-size: 20rpx;
+  text-align: center;
+}
+
 .cates {
   height: 100%;
 }
