增加收藏商品为空时的提示信息

--- a/pages/collect/index.wxml
+++ b/pages/collect/index.wxml
@@ -13,4 +13,6 @@
     </view>
   </view>
 
-<view wx:else>未登录</view>
+  <block wx:if="{{nocollection}}">
+  <view class="nocollection">无收藏商品</view>
+</block>
